--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Foundry-ERC20/lib/forge-std"]
 	path = Foundry-ERC20/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Foundry-nft/lib/forge-std"]
+	path = Foundry-nft/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
