--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Foundry-nft/lib/forge-std"]
 	path = Foundry-nft/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Foundry-nft/lib/openzeppelin-contracts"]
+	path = Foundry-nft/lib/openzeppelin-contracts
+	url = https://github.com/Openzeppelin/openzeppelin-contracts
