--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Foundry-nft/lib/foundry-devops"]
 	path = Foundry-nft/lib/foundry-devops
 	url = https://github.com/foundry-rs/foundry-devops
+[submodule "Foundry-defi-stablecoin/lib/forge-std"]
+	path = Foundry-defi-stablecoin/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
