--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Foundry-defi-stablecoin/lib/chainlink-brownie-contracts"]
 	path = Foundry-defi-stablecoin/lib/chainlink-brownie-contracts
 	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "Rebase-token/lib/forge-std"]
+	path = Rebase-token/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
