--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Rebase-token/lib/forge-std"]
 	path = Rebase-token/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Rebase-token/lib/openzeppelin-contracts"]
+	path = Rebase-token/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
