--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Rebase-token/lib/openzeppelin-contracts"]
 	path = Rebase-token/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "Merkle-airdrop/lib/forge-std"]
+	path = Merkle-airdrop/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
