--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "Merkle-airdrop/lib/openzeppelin-contracts"]
 	path = Merkle-airdrop/lib/openzeppelin-contracts
 	url = https://github.com/openzeppelin/openzeppelin-contracts
+[submodule "lib/murky"]
+	path = lib/murky
+	url = https://github.com/dmfxyz/murky
+[submodule "Merkle-airdrop/lib/murky"]
+	path = Merkle-airdrop/lib/murky
+	url = https://github.com/dmfxyz/murky
