--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "Merkle-airdrop/lib/murky"]
 	path = Merkle-airdrop/lib/murky
 	url = https://github.com/dmfxyz/murky
+[submodule "Invariant-testing/lib/forge-std"]
+	path = Invariant-testing/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
