--- a/Invariant-testing/foundry.toml
+++ b/Invariant-testing/foundry.toml
@@ -7,4 +7,6 @@ libs = ["lib"]
 fail_on_revert = false
 runs = 256
 
+remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
