--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "Invariant-testing/lib/forge-std"]
 	path = Invariant-testing/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Upgradeable-smart-contracts/lib/forge-std"]
+	path = Upgradeable-smart-contracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
