--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "Upgradeable-smart-contracts/lib/forge-std"]
 	path = Upgradeable-smart-contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Upgradeable-smart-contracts/lib/openzeppelin-contracts"]
+	path = Upgradeable-smart-contracts/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
